[project]
name = "hisaction"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
dependencies = [
    "jinja2>=3.1.3",
    "platformdirs>=4.2.2",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "matplotlib>=3.7.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hisaction = "hisaction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hisaction"]

[tool.ruff.lint]
extend-select = ["I"]
